[gd_scene load_steps=7 format=2]

[ext_resource path="res://QuizRoom.gd" type="Script" id=1]
[ext_resource path="res://gfx/Background/Backgrounds/backgroundEmpty.png" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.964706, 0.94902, 0.94902, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="backgroundEmpty" type="TextureRect" parent="."]
margin_left = -2.48413
margin_top = -9.98944
margin_right = 1021.52
margin_bottom = 1014.01
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="backgroundEmpty"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0

[node name="QuestionPanel" type="Label" parent="backgroundEmpty/VBoxContainer"]
margin_right = 984.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.054902, 0.054902, 1 )
text = "Who are you?"

[node name="Answer1" type="Button" parent="backgroundEmpty/VBoxContainer"]
margin_top = 67.0
margin_right = 984.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.117647, 0.203922, 0.917647, 1 )
custom_colors/font_color_hover = Color( 0.698039, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.768627, 0.184314, 1 )
action_mode = 0
text = "asdasd"

[node name="Answer2" type="Button" parent="backgroundEmpty/VBoxContainer"]
margin_top = 140.0
margin_right = 984.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.117647, 0.203922, 0.917647, 1 )
custom_colors/font_color_hover = Color( 0.698039, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.768627, 0.184314, 1 )
text = "asdasd"

[node name="Answer3" type="Button" parent="backgroundEmpty/VBoxContainer"]
margin_top = 213.0
margin_right = 984.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.117647, 0.203922, 0.917647, 1 )
custom_colors/font_color_hover = Color( 0.698039, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.768627, 0.184314, 1 )
text = "asdasd"

[node name="Answer4" type="Button" parent="backgroundEmpty/VBoxContainer"]
margin_top = 286.0
margin_right = 984.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.117647, 0.203922, 0.917647, 1 )
custom_colors/font_color_hover = Color( 0.698039, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.768627, 0.184314, 1 )
text = "asdasd"

[node name="score" type="Label" parent="backgroundEmpty"]
margin_left = 899.484
margin_top = 27.9894
margin_right = 964.484
margin_bottom = 41.9894
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.121569, 0.776471, 0.113725, 1 )
text = "1111"
